# tiny_agents_md

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
skills/agents-md-generate/: SKILL.md
skills/agents-md-generate/agents/: openai.yaml
skills/agents-md-review/: SKILL.md
skills/agents-md-review/agents/: openai.yaml
tests/: test_generation.py
tiny_agents_md/: __init__.py  cli.py  commands.py  doctor.py  generator.py  models.py  scanner.py
