[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-agents-md"
version = "0.1.0"
description = "A minimal, safe, and verifiable AGENTS.md generator for coding agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "tiny-agents-md contributors" }
]
dependencies = []

[project.scripts]
tiny-agents-md = "tiny_agents_md.cli:main"

[tool.setuptools.packages.find]
include = ["tiny_agents_md*"]
